remove guava use